# hetzner-mcp-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  WORKFLOWS.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-07-07-kundenserver-onboarding.md
docs/superpowers/specs/: 2026-07-07-kundenserver-onboarding-design.md
ops/: ONBOARDING.md  add-customer-server.sh  onboard_lib.py
src/hetzner_mcp/: __init__.py  config.py  server.py
src/hetzner_mcp/tools/: __init__.py  certificates.py  firewalls.py  isos.py  load_balancers.py  misc.py  networks.py  placement_groups.py  servers.py  volumes.py
tests/: test_add_customer_server_smoke.py  test_onboard_cli.py  test_onboard_lib.py
web/: .env.example  .gitignore  README.md
web/backend/: Dockerfile  requirements.txt
web/backend/app/: __init__.py  main.py
web/backend/app/services/: __init__.py  ai_provider.py  mcp_tools_registry.py
web/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/frontend/src/: App.tsx  index.css
web/frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  DockerMonitoring.tsx  HetznerMonitoring.tsx  MetricsChart.tsx  MetricsHistory.tsx  TimeRangeSelector.tsx
web/frontend/src/hooks/: useAiChat.ts  useCommandHistory.ts
web/frontend/src/pages/: AiAssistantPage.tsx  CliPage.tsx  CostsPage.tsx  DashboardPage.tsx  FirewallsPage.tsx  LoadBalancersPage.tsx  MonitoringPage.tsx  NetworksPage.tsx  SecurityPage.tsx  ServersPage.tsx  SettingsPage.tsx  (+4 more)
(+21 files in other folders)
